--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.18.2",
     "express-openid-connect": "^2.13.0",
     "pg": "^8.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.37.0"
   }
 }
