--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
             }
         ],
         "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
-        "indent": ["error", "tab"]
+        "indent": ["error", "tab"],
+        "prefer-const": ["error"],
+        "semi": ["error"]
     }
 }
