Add some new rules to the linter. Making it up as I go along tbh

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
             "error", {
                 "comments": 65,
                 "tabWidth": 4,
-                "ignoreStrings": true
+                "ignoreStrings": true,
+                "ignoreRegExpLiterals": true
             }
         ],
         "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
