--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
         "indent": ["error", "tab"],
         "prefer-const": ["error"],
-        "semi": ["error"]
+        "semi": ["error"],
+        "quotes": ["error", "single", { "allowTemplateLiterals": true }]
     }
 }
