Add rules to eslint & an ignore file for the static folder

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,10 @@
         "indent": ["error", "tab"],
         "prefer-const": ["error"],
         "semi": ["error"],
-        "quotes": ["error", "single", { "allowTemplateLiterals": true }]
+        "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+        "comma-dangle": ["error", {
+            "arrays": "never",
+            "objects": "always-multiline"
+        }]
     }
 }
